# gzm-research

./: .dockerignore  .env.api  .env.example  .gitignore  Dockerfile  README.md  create_db.py  db_operations.py  final_mapping_pl.csv  pyproject.toml
.github/workflows/: deploy.yml
data/fine-tuning/gemma/: preprocess_data.py  preprocess_data_gemma.py  test.jsonl  train.jsonl  valid.jsonl
data/fine-tuning/openai/: preprocess_data_openai.py  train.jsonl  valid.jsonl
docs/: openai-api-integration.md
evals/: evaluation.py  run_eval_sql_queries.py  update_evals_with_sql_outputs.py
src/: __init__.py  eval_dataset.json  eval_dataset_schema.json  eval_sql.json  llm_query_cli.py  llm_sql.py  query_db.py  run_eval_queries.py  sql_query_prompt.jinja2  survey_metadata.json  survey_metadata_queries.json  survey_metadata_queries_simple.md  utils.py
src/data_preprocessing/: preprocess_spss_data.py  survey_metadata_spss.json
src/gemini_finetuning/: .env.template  README.md  convert_dataset.py  gemini_documentation.md  launch_finetune.py  prepare_gemini_data.sh  requirements.txt  test_conversion.py  upload_to_gcs.py  use_tuned_model.py
src/research/: config.py
src/research/api/: __init__.py  app.py  gemini_chat_service.py
src/research/cli/: __init__.py  db_cli.py  llm_cli.py
src/research/data_preprocessing/: __init__.py  preprocess_spss_data.py  survey_metadata_spss.json
src/research/db/: __init__.py  connection.py  operations.py  schema.py
src/research/llm/: __init__.py  build_faiss_index.py  gemini.py  reranker.py  search_examples.py  semantic_search.py  sql_generator.py
src/research/llm/prompts/: sql_query_prompt.jinja2
src/research/utils/: logger.py
tests/: test_reranker.py  test_result_equals.py  test_semantic_search.py
