[project]
name = "gzm-survey-analysis"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "click>=8.1.8",
    "duckdb>=1.2.2",
    "google-genai>=1.10.0",
    "jinja2>=3.1.6",
    "openai>=1.75.0",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "pydantic-ai-slim[groq,openai]>=0.1.2",
    "pydantic-evals[logfire]>=0.0.55",
    "pyreadstat>=1.2.8",
    "pytest>=8.3.5",
    "pytest-asyncio>=0.26.0",
    "python-dotenv>=1.1.0",
    "pyyaml>=6.0.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/research", "evals"]

[tool.hatch.metadata]
allow-direct-references = true

[project.scripts]
db = "research.cli.db_cli:cli"
llm-query = "research.cli.llm_cli:cli"
evaluate = "evals.evaluation:main"
db-load = "research.data_preprocessing.preprocess_spss_data:cli"

[tool.logfire]
project_name = "gzm"
project_url = "https://logfire.pydantic.dev/zkme/gzm"
